# data-collect

./: README.md  collect.ipynb  pyproject.toml
JovemNerd/: episodios.ipynb
JovemNerd/data/episodios/json/: 20240715_203717.781074.json  20240715_203732.500554.json
TabNews/: basic_content.ipynb
TabNews/data/contents/json/: 20240715_200838.538243.json  20240715_200843.774656.json  20240715_200848.952229.json  20240715_200852.744337.json  20240715_200857.954574.json  20240715_200903.140840.json  20240715_200908.317404.json  20240715_200913.491667.json  20240715_200918.661950.json  20240715_200922.403328.json  20240715_200927.685603.json  20240715_200933.197002.json  20240715_200938.420843.json  20240715_200943.580628.json  20240715_200948.776991.json  20240715_200952.534950.json  20240715_200957.770057.json  20240715_201002.965184.json  20240715_201008.152021.json  20240715_201013.451413.json  20240715_201018.623258.json  20240715_201022.383995.json
